--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-email/components": "^0.0.22",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@react-three/rapier": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.12",
+    "leva": "^0.9.35",
     "lucide-react": "^0.414.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
